<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/selSecretButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selSecret" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/top_list_entry" >
    </ListView>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/recvMsgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recv"
            android:visibility="gone" />

        <Button
            android:id="@+id/sendAnonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendAnon" />

        <Button
            android:id="@+id/sendMsgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/shareNfcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shareNFC"
            android:visibility="gone" />

        <Button
            android:id="@+id/shareQrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shareQR" />
    </LinearLayout>

</LinearLayout>